chnage into new branch front mainpage

--- a/front/src/scss/style.scss
+++ b/front/src/scss/style.scss
@@ -1,5 +1,6 @@
 /*Je crée la bar de gauche sur l'affichage @use "./components/LeftBar";*/
 @use "./components/login";
+@use "./components/mainPage";
 
 .dis{
     display: flex;
