--- a/front/src/scss/components/_mainPage.scss
+++ b/front/src/scss/components/_mainPage.scss
@@ -1,2 +1,9 @@
 @use '../ForAll/colors' as color;
 
+.MainPage-BlackAndWhite{
+    height: 50vw;
+    width: 50vw;
+    margin-top: -10px;
+    margin-left: -10px;
+    background-color: color.$MainColor;
+}
