--- a/front/src/scss/style.scss
+++ b/front/src/scss/style.scss
@@ -1,6 +1,8 @@
 /*Je crée la bar de gauche sur l'affichage @use "./components/LeftBar";*/
 @use "./components/login";
 @use "./components/mainPage";
+@use "./components/CustomerCreateAccount";
+@use "./components/LeftBar";
 
 /*On importe les composents qui seront appliquer à toutes les pages*/
 @use "./ForAll/forall";
