Page connexion finit (logo)

--- a/front/src/scss/components/_login.scss
+++ b/front/src/scss/components/_login.scss
@@ -1,9 +1,69 @@
 @use '../ForAll/colors' as color;
 
-.blue{
-    margin-top: -10px;
-    margin-left: -10px;
-    width: 20vw;
-    height: 100vh;
+.white{
+    background-color: color.$SecondColor;
+}
+.Button{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin-top: 5%;
+    padding: 14px;
+    font-size: 20px;
+    font-family: 'Patrick Hand', cursive;
+}
+.button1 {
     background-color: color.$MainColor;
+    color: color.$SecondColor;
+    border-radius: 10px;
+    font-size: 20px;
+    font-weight:bold;
+    max-height:min-content;
+    min-width: 20vw;
+    align-items: center;    
+}
+.button2 {
+    background: transparent;
+    border: transparent;
+    text-decoration: underline;
+    font-size: 50px;
+    font-weight:bold;
+    max-height: 5vh;
+}
+p {
+    font-size: 2vh;
+}
+.Texte {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-top: 15%;
+    padding: 10px;
+    font-size: 20px;
+    font-family: 'Patrick Hand', cursive;
+    margin-bottom: 10px;
+}
+.texte-mail {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    margin-top: 1%;
+    padding: 1px;
+    font-size: 1.2em;
+    margin-bottom: 1%;
+}
+.texte-mdp {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    margin: 1%;
+    padding: 1px;
+    font-size: 1.2em;
+}
+p1 {
+    font-weight:bold;
+    font-family: 'Patrick Hand', cursive;
+    justify-content: left;
+
 }
