--- a/front/src/scss/components/_HomePage.scss
+++ b/front/src/scss/components/_HomePage.scss
@@ -1,5 +1,5 @@
 @use '../ForAll/colors' as color;
 
 .black {
-    background-color: color.$SecondColor;
+    background-color: color.$MainColor;
 }
