--- a/front/src/scss/components/_mainPage.scss
+++ b/front/src/scss/components/_mainPage.scss
@@ -42,7 +42,7 @@
  .MainPage-paragraf{
     font-size: 15px;
  }
- .MainPage-BlackSquare > button{
+ .MainPage-BlackSquare >form > button{
     color: color.$SecondColor;
     border: color.$SecondColor 2px solid;
     background: transparent;
