--- a/front/src/scss/style.scss
+++ b/front/src/scss/style.scss
@@ -2,6 +2,8 @@
 @use "./components/login";
 @use "./components/mainPage";
 @use "./components/CustomerCreateAccount";
+@use "./components/HomePage";
+@use "./components/Item";
 
 /*On importe les composents qui seront appliquer à toutes les pages*/
 @use "./ForAll/forall";
