--- a/front/src/scss/style.scss
+++ b/front/src/scss/style.scss
@@ -5,6 +5,7 @@
 @use "./components/HomePage";
 @use "./components/Item";
 @use "./components/addProductPage";
+@use "./components/topBar";
 
 /*On importe les composents qui seront appliquer à toutes les pages*/
 @use "./ForAll/forall";
