Cart shopping in progress

--- a/front/src/scss/components/_HomePage.scss
+++ b/front/src/scss/components/_HomePage.scss
@@ -52,7 +52,8 @@
 }
 .HomePage-SearchBar{
     background-color: transparent;
-    border: none 0px;
+    border: transparent 2px;
+    margin-right: 1vw;
     font-size: 20px;
     color: color.$MainColor;
 }
