--- a/front/src/scss/style.scss
+++ b/front/src/scss/style.scss
@@ -4,6 +4,7 @@
 @use "./components/CustomerCreateAccount";
 @use "./components/HomePage";
 @use "./components/Item";
+@use "./components/Cart";
 
 /*On importe les composents qui seront appliquer à toutes les pages*/
 @use "./ForAll/forall";
