ajout de la page profile

--- a/front/src/scss/components/_topBar.scss
+++ b/front/src/scss/components/_topBar.scss
@@ -53,3 +53,9 @@
     border: transparent;
     background: transparent;
 }
+
+.Top-Profile {
+    border: transparent;
+    background: transparent;
+
+}
