--- a/front/src/scss/style.scss
+++ b/front/src/scss/style.scss
@@ -6,6 +6,7 @@
 @use "./components/Item";
 @use "./components/addProductPage";
 @use "./components/topBar";
+@use "./components/ItemPage";
 
 /*On importe les composents qui seront appliquer à toutes les pages*/
 @use "./ForAll/forall";
