--- a/front/src/scss/style.scss
+++ b/front/src/scss/style.scss
@@ -3,6 +3,8 @@
 @use "./components/mainPage";
 @use "./components/CustomerCreateAccount";
 @use "./components/HomePage";
+@use "./components/profile";
+@use "./components/topBar";
 @use "./components/Item";
 
 /*On importe les composents qui seront appliquer à toutes les pages*/
