--- a/front/src/scss/components/_Cart.scss
+++ b/front/src/scss/components/_Cart.scss
@@ -58,7 +58,7 @@
 }
 
 .Cart-Center {
-        background-color: color.$SecondColor;
+        background-color: color.$MainColor;
         height: 80vh;
         display: flex;
         flex-direction: row;
@@ -66,7 +66,7 @@
 }
 
 .Cart-Center-Left {
-        background-color: color.$MainColor;
+        background-color: color.$SecondColor;
         height: 70vh;
         width: 30vw;
         display: flex;
@@ -80,7 +80,6 @@
         background-color: color.$MainColor;
         height: 70vh;
         width: 30vw;
-        display: flex;
         flex-direction: row;
         align-items: center;
         margin-right: 10%;
@@ -90,25 +89,25 @@
 }
 
 .Cart-Center-Top {
-        background-color: aqua;
-        height: 30vh;
-        width: 30vw;
+        background-color: color.$SecondColor;
+        height: 25vh;
+        width: 25vw;
         display: flex;
         flex-direction: row;
         align-items: center;
-        margin: 10%;
-        margin-top: -6.5%;
+        margin: 0%;
+        margin-top: 0%;
 }
 
 .Cart-Center-Bottom {
-        background-color: color.$MainColor;
-        height: 30vh;
-        width: 30vw;
+        background-color: color.$SecondColor;
+        height: 33vh;
+        width: 25vw;
         display: flex;
         flex-direction: row;
         align-items: center;
-        margin: 10%;
-        margin-top: -6.5%;
+        margin: 0%;
+        margin-top: 15%;
 }
 
 p1 {
@@ -119,5 +118,6 @@ p1 {
     align-items: center;
     color: color.$SecondColor;
     margin-top: 2vh;
+    font-size: 120%;
     
 }
