--- a/front/src/scss/components/_ItemPage.scss
+++ b/front/src/scss/components/_ItemPage.scss
@@ -61,19 +61,19 @@
   .Item-twoToRight{
     margin-left: 2vw;
   }
-  .ItemPage-coloms > button{;
+  .ItemPage-coloms > form > button{;
     margin-left: 10vw;
     min-width: 15vw;
     min-height: 5vh;
     margin-bottom: 2vh;
     border-raduis: 5px;
   }
-  .ItemPage-coloms > button:first-child{
+  .ItemPage-coloms > form:first-child > button{
     margin-top: 4vh;
     color : color.$SecondColor;
     background: color.$MainColor;
   }
-  .ItemPage-coloms > button:last-child{
+  .ItemPage-coloms > form:last-child > button{
     background: transparent;
     border: color.$MainColor 2px solid;
   }
