--- a/front/src/scss/components/_Cart.scss
+++ b/front/src/scss/components/_Cart.scss
@@ -59,7 +59,7 @@
 
 .Cart-Center {
         background-color: color.$MainColor;
-        height: 80vh;
+        height: 70vh;
         display: flex;
         flex-direction: row;
         align-items: center;
@@ -74,6 +74,7 @@
         align-items: center;
         margin-left: 10%;
         margin-top: 3%;
+        border-radius: 10px;
 }
 
 .Cart-Center-Right {
@@ -97,6 +98,7 @@
         align-items: center;
         margin: 0%;
         margin-top: 0%;
+        border-radius: 10px;
 }
 
 .Cart-Center-Bottom {
@@ -108,16 +110,59 @@
         align-items: center;
         margin: 0%;
         margin-top: 15%;
+        border-radius: 10px;
 }
 
-p1 {
+.MyCart {
     font-weight:bold;
-    font-family: 'Patrick Hand', cursive;
     display: flex;
     flex-direction: column;
     align-items: center;
     color: color.$SecondColor;
     margin-top: 2vh;
-    font-size: 120%;
+    font-size: 180%;
+    margin-right: 6%;
     
+}
+
+p {
+        font-size: 10px;
+}
+
+.button1 {
+        background-color: color.$MainColor;
+        color: color.$SecondColor;
+        border-radius: 12px;
+        font-size: 20px;
+        font-weight:bold;
+        min-height: 1vh;
+        min-width: 10vw;
+        align-items: center;
+        margin-left: 3%; 
+        margin-bottom:12%;   
+}
+
+.Products {
+        font-weight:bold;
+        font-size: 15px;
+        margin-bottom: 2%;
+        margin-top: 35px;
+}
+
+.Livraison {
+        font-weight:bold;
+        font-size: 15px;
+        margin-bottom: 10px;
+}
+
+.Total {
+        font-weight:bold;
+        font-size: 20px;
+        margin-top: 8px;
+}
+
+.Details {
+        font-weight:bold;
+        margin-left: 10%;
+        font-size: 100%;
 }
